Add the theoremsetc Python package
* plasTeX/Packages/theoremsetc.py: New file.  Package for typesetting
  statements like theorems and definitions.

* plasTeX/Renderers/HTMLNotes/Templates/jinja2/theoremsetc.jinja2s:
  New file.  Contains templates for rendering the macros and
  environments defined in the above package.

* plasTeX/Renderers/HTMLNotes/Style/sass/base/_theoremsetc.scss: New
  file.  Contains the Sass style rules for theorems, definitions, etc.

* plasTeX/Renderers/HTMLNotes/Style/sass/base/_main.scss: Use the
  above file.

* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css:
* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-green.css:
Freshly generated after the above changes to the Sass sources.

--- a/plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css
+++ b/plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css
@@ -247,6 +247,42 @@ div.content {
   padding: 1rem 1rem 2.5rem 1rem;
 }
 
+div.theorem-style-theorem {
+  font-style: italic;
+}
+
+div.definition-style-theorem {
+  font-style: normal;
+}
+
+span.theorem-heading {
+  margin-right: 0.5rem;
+  font-style: normal;
+  font-weight: bold;
+}
+
+span.theorem-number {
+  margin-right: 0.25rem;
+}
+
+span.theorem-note {
+  margin-left: 0.25rem;
+}
+
+div.proof {
+  font-style: normal;
+}
+
+span.proof-heading {
+  margin-right: 0.5rem;
+  font-style: normal;
+  font-weight: bold;
+}
+
+span.qed {
+  float: right;
+}
+
 div.content {
   line-height: 1.4rem;
 }
