--- a/plasTeX/Renderers/HTMLNotes/Style/sass/base/_typography.scss
+++ b/plasTeX/Renderers/HTMLNotes/Style/sass/base/_typography.scss
@@ -32,6 +32,10 @@ h1 {
     margin: 1rem 0;
 }
 
+h1 span.section-number {
+    margin-right: 0.75rem;
+}
+
 h2 {
     font-size: 1.5rem;
     margin: 0.8rem 0;
