--- a/plasTeX/Renderers/HTMLNotes/Style/sass/base/_table-of-contents.scss
+++ b/plasTeX/Renderers/HTMLNotes/Style/sass/base/_table-of-contents.scss
@@ -63,6 +63,13 @@ nav.active {
 
 }
 
+ul.sub-toc-0 {
+    margin-top: 0;
+}
+
+ul.sub-toc-0 li a span.toc_ref {
+    margin-right: 0.75rem;
+}
 
 @for $i from 0 through 4 {
     .sub-toc-#{$i} a {
