--- a/plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-green.css
+++ b/plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-green.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 ul.breadcrumbs {
   margin: 1rem 0 0 0;
   padding: 0 0 0 0.5rem;
@@ -138,7 +137,7 @@ span.bibliography_entry_book_year {
 }
 
 ul.bibliography_entry_citations {
-  list-style-type: "⁃ ";
+  list-style-type: circle;
 }
 
 li.bibliography_entry_citation {
@@ -230,6 +229,14 @@ nav.active {
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+ul.sub-toc-0 {
+  margin-top: 0;
+}
+
+ul.sub-toc-0 li a span.toc_ref {
+  margin-right: 0.75rem;
 }
 
 .sub-toc-0 a {
