--- a/plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css
+++ b/plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css
@@ -480,6 +480,10 @@ p {
   font-weight: normal;
 }
 
+span.nowrap {
+  white-space: nowrap;
+}
+
 body {
   color: black;
   background-color: white;
